--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=EmployeePayroll
+server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/payroll_service
+spring.datasource.username=root
+spring.datasource.password=Jagratidixit@5600
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.show-sql=true
+
