Use Lombok Library for Logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,17 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create-drop
-
 spring.jpa.show-sql=true
+
+//UC7
+#logging
+# Enable Logging
+logging.level.root=INFO
+logging.level.com.example=DEBUG
+
+# Log File Configuration
+logging.file.name=logs/app.log
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %level - %msg%n
+
+
 
